--- a/ansible/roles/kubernetes/tasks/install_requirements.yaml
+++ b/ansible/roles/kubernetes/tasks/install_requirements.yaml
@@ -9,30 +9,31 @@
       - ca-certificates
     update_cache: yes
 
-- name: Install kubernetes and docker repo key
-  apt_key:
-    url: "{{ item.url }}"
-    state: present
-  loop:
-    - {url: "https://packages.cloud.google.com/apt/doc/apt-key.gpg"}
-    - {url: "https://download.docker.com/linux/ubuntu/gpg"}
+- name: Add Kubernetes and Docker repo keys using apt-key
+  shell: |
+    curl -fsSL https://pkgs.k8s.io/core:/stable:/{{ k8s_version }}/deb/Release.key | gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
+    curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
 
-- name: Install kubernetes and docker repo
+- name: Add Kubernetes repository
   apt_repository:
-    repo: "{{ item.repo }}"
+    repo: "deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/{{ k8s_version }}/deb/ /"
     state: present
-  loop:
-    - {repo: "deb http://apt.kubernetes.io/ kubernetes-xenial main"}
-    - {repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"}
+    filename: 'kubernetes'
 
-- name: Install packeges
-  yum:
-    name: 
-     - containerd.io
-     - kubelet
-     - kubeadm
-     - kubernetes-cni
-     - bridge-utils
+- name: Add Docker repository
+  apt_repository:
+    repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
+    state: present
+    filename: 'docker'
+
+- name: Install Kubernetes and Docker packages
+  apt:
+    name:
+      - kubelet
+      - kubeadm
+      - kubectl
+      - containerd.io
+    state: present
     update_cache: yes
 
 - name: Configure containerd
